Fix spacing

--- a/Assets/css/application-branding.css
+++ b/Assets/css/application-branding.css
@@ -240,6 +240,11 @@ textarea.login-message-textarea::placeholder {
     color: #4D4D4D;
 }
 
+form.login-form .form-actions {
+    padding-top: 0;
+    margin-bottom: 60px;
+}
+
 .login-area .captcha-img {
     display: inline-block;
     vertical-align: middle;
